[package]
name = "icewolf-as"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "*"
pest_derive = "*"
lazy_static = "*"

[profile.dev]
opt-level = 3
debug = 0

[profile.dev.package."*"]
opt-level = 3
debug = 0