[package]
name = "okas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "*"
pest_derive = "*"
lazy_static = "1.4.0"

[profile.dev]
opt-level = 3
debug = 0

[profile.dev.package."*"]
opt-level = 3
debug = 0